migrate to typescript

--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
   "devDependencies": {
     "eslint": "^8.40.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^4.0.1"
+    "eslint-webpack-plugin": "^4.0.1",
+    "svg-url-loader": "^8.0.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4"
   }
 }
