--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-select": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "svgo": "^3.0.2",
     "web-vitals": "^2.1.4"
@@ -49,6 +50,6 @@
     "eslint-webpack-plugin": "^4.0.1",
     "svg-url-loader": "^8.0.0",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4"
+    "typescript": "^4.4.4"
   }
 }
