--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
     "ts-loader": "^9.4.2",
     "typescript": "^4.4.4"
   },
+  "homepage": "https://elpopes.github.io/tasesq/",
   "proxy": "http://localhost:5000"
 }
