--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-select": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.62.1",
