--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tasesq",
+  "name": "Tijerina Federal Lawyer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "css-select": "^5.1.0",
+    "gatsby-plugin-sitemap": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -59,6 +60,6 @@
     "ts-loader": "^9.4.2",
     "typescript": "^4.4.4"
   },
-  "homepage": "https://elpopes.github.io/tasesq/",
+  "homepage": "https://tijerinafedlaw.com/",
   "proxy": "http://localhost:5000"
 }
