--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "css-select": "^5.1.0",
+    "gatsby-plugin-google-gtag": "^5.12.0",
     "gatsby-plugin-sitemap": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
