--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "axios": "^1.4.0",
     "css-select": "^5.1.0",
     "gatsby-plugin-google-gtag": "^5.12.0",
-    "gatsby-plugin-sitemap": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
