--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-ga": "^2.3.0",
     "axios": "^1.4.0",
     "css-select": "^5.1.0",
     "gatsby-plugin-google-gtag": "^5.12.0",
